# situbot

src/sagittarius_arm_ros/situbot/: README.md  package.xml
src/sagittarius_arm_ros/situbot/__pycache__/: setup.cpython-312.pyc.2150862546608
src/sagittarius_arm_ros/situbot/config/: objects.yaml  situbot_params.yaml
src/sagittarius_arm_ros/situbot/config/models/: README.md
src/sagittarius_arm_ros/situbot/launch/: perception.launch  situbot_full.launch  situbot_sim.launch
src/sagittarius_arm_ros/situbot/msg/: ArrangementPlan.msg  DetectedObject.msg  DetectedObjects.msg  ObjectPlacement.msg  PlannedAction.msg
src/sagittarius_arm_ros/situbot/nodes/: evaluator_node.py  executor_node.py  perception_node.py  planner_node.py  reasoning_node.py
src/sagittarius_arm_ros/situbot/nodes/__pycache__/: evaluator_node.cpython-312.pyc.2150856850288  executor_node.cpython-312.pyc.2150856850672  perception_node.cpython-312.pyc.2150863470640  planner_node.cpython-312.pyc.2150863471024  reasoning_node.cpython-312.pyc.2150863472176
src/sagittarius_arm_ros/situbot/scripts/: inject_arrangement.py  run_single.py  run_situbench.py  test_planner_offline.py
src/sagittarius_arm_ros/situbot/scripts/__pycache__/: analyze_results.cpython-312.pyc.2150863470832  run_single.cpython-312.pyc.2150863471600  run_situbench.cpython-312.pyc.2150863472752
src/sagittarius_arm_ros/situbot/src/situbot/__pycache__/: __init__.cpython-312.pyc.1434372067312
src/sagittarius_arm_ros/situbot/src/situbot/evaluation/: roundtrip.py
src/sagittarius_arm_ros/situbot/src/situbot/evaluation/__pycache__/: __init__.cpython-312.pyc.2150863102960  metrics.cpython-312.pyc.2150863103168  roundtrip.cpython-312.pyc.2150863103376
src/sagittarius_arm_ros/situbot/src/situbot/execution/: moveit_executor.py
src/sagittarius_arm_ros/situbot/src/situbot/perception/: __init__.py  detector.py  hsv_fallback.py  scene_description.py
src/sagittarius_arm_ros/situbot/src/situbot/planning/: __init__.py  collision_checker.py  placement_optimizer.py  sequence_planner.py  zone_mapper.py
src/sagittarius_arm_ros/situbot/src/situbot/reasoning/: llm_client.py  prompts.py  situation_reasoner.py
src/sagittarius_arm_ros/situbot/src/situbot/utils/: transforms.py
src/sagittarius_arm_ros/situbot/srv/: EvaluateScene.srv
src/sagittarius_arm_ros/situbot/test_data/: arrangement_result.json
src/sagittarius_arm_ros/situbot/test_data/data/: api_test.py  cleaned_data.json  data_cleaning.py  object_preview.py
src/sagittarius_arm_ros/situbot/tests/: test_executor_node_template.py  test_sequence_planner_template.py
(+25 files in other folders)
