<?xml version="1.0"?>
<package format="2">
  <name>situbot</name>
  <version>0.1.0</version>
  <description>SituBot: Situation-Conditioned Object Rearrangement with LLM Reasoning</description>

  <maintainer email="group10@cuhk.edu.cn">AIR5021 Group 10</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>sagittarius_object_color_detector</exec_depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>
